--- a/public/css/localizaciones/styleLocIndex.css
+++ b/public/css/localizaciones/styleLocIndex.css
@@ -238,7 +238,8 @@
     border-radius: 3px;
 }
 
-#ghost-actions {
+#ghost-actions,
+.ghost-actions {
     position: absolute;
     transform: translateY(-100%);
     display: none;
